Main column spacing fix

--- a/style.css
+++ b/style.css
@@ -75,7 +75,6 @@ header {
     grid-template: 1fr 1fr / 4fr 2fr;
     align-items: center;
     justify-items: stretch;
-    
 }
 
 .search {
@@ -159,7 +158,7 @@ header {
 
 main {
     display: grid;
-    grid-template: 1fr 1fr / 2fr 1fr;
+    grid-template: 1fr 2fr / 2fr 1fr;
 }
 
 .title {
@@ -172,6 +171,7 @@ main {
     display: grid;
     grid-row: 1 / span 2;
     grid-auto-rows: max-content;
+    overflow: hidden;
 }
 
 .cards {
